# university_cnmo

./: Cargo.toml
src/: functions.rs  lib.rs  main.rs
src/lab1/: functions.rs  main.rs
src/lab2/: main.rs
