[package]
name = "lab1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

approx = "0.5.1"
num-traits = "0.2.15"

[[bin]]
name = "lab1"
path = "src/lab1/main.rs"

[[bin]]
name = "lab2"
path = "src/lab2/main.rs"
